--- a/TwoChange/app/src/main/res/layout/fragment_new_product.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_new_product.xml
@@ -113,6 +113,19 @@
                         style="@style/LabelDivider" />
                 </LinearLayout>
 
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp">
+                    <EditText
+                        android:id="@+id/products_price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal|numberSigned"
+                        android:hint="@string/product_s_price"/>
+                </android.support.design.widget.TextInputLayout>
+
                 <TextView
                     android:text="@string/image_hint"
                     style="@style/InputLabel"
