--- a/TwoChange/app/src/main/res/menu/menu_list.xml
+++ b/TwoChange/app/src/main/res/menu/menu_list.xml
@@ -5,16 +5,16 @@
     <item
         android:id="@+id/action_add"
         android:icon="@drawable/ic_action_add"
-        android:title="@string/action_add"
+        android:name="@string/action_add"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_edit"
         android:icon="@drawable/ic_action_edit"
-        android:title="@string/action_edit"
+        android:name="@string/action_edit"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_match"
         android:icon="@drawable/ic_action_match"
-        android:title="@string/action_match"
+        android:name="@string/action_match"
         app:showAsAction="always" />
 </menu>
