--- a/TwoChange/app/src/main/res/menu/navigation_lists.xml
+++ b/TwoChange/app/src/main/res/menu/navigation_lists.xml
@@ -3,17 +3,20 @@
 
     <item
         android:id="@+id/navigation_wanted"
-        android:name="@string/wanted" />
+        android:name="@string/wanted"
+        android:title="@string/wanted" />
     <!--HEART ICON-->
 
     <item
         android:id="@+id/navigation_offered"
-        android:name="@string/offered" />
+        android:name="@string/offered"
+        android:title="@string/offered" />
     <!--??? ICON-->
 
     <item
         android:id="@+id/navigation_matches"
-        android:name="@string/matches" />
+        android:name="@string/matches"
+        android:title="@string/matches" />
     <!--??? ICON-->
 
 </menu>
