--- a/TwoChange/app/src/main/res/menu/menu_user_profile.xml
+++ b/TwoChange/app/src/main/res/menu/menu_user_profile.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="pes.twochange.presentation.controller.ProfileActivity">
+    tools:context="pes.twochange.presentation.controller.ProfileActivity"
+    app:title="User profile">
 
     <item
         android:id="@+id/action_block"
