--- a/TwoChange/app/src/main/res/layout/fragment_new_product.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_new_product.xml
@@ -11,38 +11,47 @@
         android:background="@color/white"
         app:cardCornerRadius="16dp">
 
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/header_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_alignParentTop="true">
+
+            <ImageView
+                android:id="@+id/close_button"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_close_grey600_24dp"
+                android:contentDescription="@string/close" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:text="@string/your_product"
+                android:gravity="center"
+                android:textSize="20sp" />
+
+        </RelativeLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/header_text"
+            android:layout_above="@+id/post_product_button">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp">
-
-                    <ImageView
-                        android:id="@+id/close_button"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_close_grey600_24dp"
-                        android:contentDescription="@string/close" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="36dp"
-                        android:text="@string/your_product"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
-
-                </RelativeLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -122,7 +131,7 @@
                         android:id="@+id/products_price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="numberDecimal|numberSigned"
+                        android:inputType="numberSigned"
                         android:hint="@string/product_s_price"/>
                 </android.support.design.widget.TextInputLayout>
 
@@ -158,19 +167,21 @@
 
                 </HorizontalScrollView>
 
-                <TextView
-                    android:id="@+id/post_product_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="?android:attr/actionBarSize"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="20sp"
-                    android:text="@string/post_product"/>
-
             </LinearLayout>
 
         </ScrollView>
+
+        <TextView
+            android:id="@+id/post_product_button"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
+            android:text="@string/post_product"
+            android:layout_alignParentBottom="true"/>
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
