--- a/TwoChange/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_edit_profile.xml
@@ -82,7 +82,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAlignment="viewEnd"
-                    android:inputType="phone"
+                    android:inputType="number"
                     android:background="@android:color/transparent" />
             </LinearLayout>
 
