--- a/TwoChange/app/src/main/res/layout/fragment_login.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_login.xml
@@ -101,8 +101,8 @@
     <Button
         android:id="@+id/newUserBtn"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="339dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="Create a new user"
@@ -110,9 +110,8 @@
         app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="54dp"
         app:layout_constraintTop_toBottomOf="@+id/googleBtn" />
 
 </android.support.constraint.ConstraintLayout>
