--- a/TwoChange/app/src/main/res/menu/menu_chat.xml
+++ b/TwoChange/app/src/main/res/menu/menu_chat.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="pes.twochange.presentation.activity.ChatActivity">
+    tools:context="pes.twochange.presentation.controller.ChatActivity">
     <item
         android:id="@+id/action_photo"
         android:icon="@drawable/ic_action_photo"
