--- a/TwoChange/app/src/main/res/layout/activity_ad_lists.xml
+++ b/TwoChange/app/src/main/res/layout/activity_ad_lists.xml
@@ -9,7 +9,7 @@
     tools:context=".presentation.controller.ListsActivity">
 
     <FrameLayout
-        android:id="@+id/content"
+        android:id="@+id/content_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
