--- a/TwoChange/app/src/main/res/menu/menu_chat.xml
+++ b/TwoChange/app/src/main/res/menu/menu_chat.xml
@@ -6,5 +6,15 @@
         android:id="@+id/action_photo"
         android:icon="@drawable/ic_action_photo"
         android:title="@string/action_photo"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
+    <group>
+        <item
+            android:title="Send contact details"
+            android:id="@+id/send_details"/>
+        <item
+            android:title="Block this user"
+            android:id="@+id/block_user"/>
+    </group>
+
+
 </menu>
