Match list, accept, decline and views for products

--- a/TwoChange/app/src/main/res/values/colors.xml
+++ b/TwoChange/app/src/main/res/values/colors.xml
@@ -23,5 +23,6 @@
     <color name="green_800">#2E7D32</color>
     <color name="green_900">#1B5E20</color>
 
+    <color name="redPrimary">#A04347</color>
 
 </resources>
