--- a/TwoChange/app/src/main/res/layout/activity_ad_lists.xml
+++ b/TwoChange/app/src/main/res/layout/activity_ad_lists.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -11,8 +11,9 @@
     <FrameLayout
         android:id="@+id/content_list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/navigation">
 
     </FrameLayout>
 
@@ -22,8 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
+        android:layout_alignParentBottom="true"
         app:menu="@menu/navigation_lists" />
 
 
 
-</LinearLayout>
+</RelativeLayout>
