--- a/TwoChange/app/src/main/res/layout/fragment_product.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_product.xml
@@ -1,13 +1,17 @@
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app = "http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
     tools:context="pes.twochange.presentation.fragment.ProductFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/image_pager"
@@ -89,41 +93,49 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/user_layout"
+    <LinearLayout
+        android:id="@+id/content_layout"
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"/>
 
-        <ImageView
-            android:id="@+id/user_image"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@mipmap/placeholder"
-            android:layout_alignParentStart="true"/>
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/user_username"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:gravity="center_vertical"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:layout_toEndOf="@+id/user_image"
-            android:layout_toStartOf="@+id/user_action" />
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/user_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="48dp">-->
 
-        <Button
-            android:id="@+id/user_action"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/colorAccent"
-            android:layout_alignParentEnd="true"
-            android:text="@string/chat_button"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            tools:targetApi="lollipop" />
+        <!--<ImageView-->
+            <!--android:id="@+id/user_image"-->
+            <!--android:layout_width="48dp"-->
+            <!--android:layout_height="48dp"-->
+            <!--android:src="@mipmap/placeholder"-->
+            <!--android:layout_alignParentStart="true"/>-->
 
-    </RelativeLayout>
+        <!--<TextView-->
+            <!--android:id="@+id/user_username"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--android:layout_marginEnd="16dp"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textSize="18sp"-->
+            <!--android:textColor="@color/black"-->
+            <!--android:layout_toEndOf="@+id/user_image"-->
+            <!--android:layout_toStartOf="@+id/user_action" />-->
 
-</LinearLayout>
+        <!--<Button-->
+            <!--android:id="@+id/user_action"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:backgroundTint="@color/colorAccent"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:text="@string/chat_button"-->
+            <!--android:textSize="18sp"-->
+            <!--android:textColor="@color/black"-->
+            <!--tools:targetApi="lollipop" />-->
+
+    <!--</RelativeLayout>-->
+
+</ScrollView>
