--- a/TwoChange/app/src/main/res/layout/match_item_view.xml
+++ b/TwoChange/app/src/main/res/layout/match_item_view.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/text"
@@ -13,5 +13,14 @@
         android:gravity="center_vertical|start"
         android:textSize="16sp"
         android:textColor="@color/black" />
+
+    <LinearLayout
+        android:id="@+id/status_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="2dp"
+        android:layout_below="@+id/text"
+        android:background="#ff0000ff"
+        android:orientation="horizontal" />
 
 </RelativeLayout>
