--- a/TwoChange/app/src/main/res/layout/activity_profile_1.xml
+++ b/TwoChange/app/src/main/res/layout/activity_profile_1.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="pes.twochange.presentation.activity.ProfileActivity">
+    tools:context="pes.twochange.presentation.activity.ProfileNoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
