--- a/TwoChange/app/src/main/res/layout/product_item_row.xml
+++ b/TwoChange/app/src/main/res/layout/product_item_row.xml
@@ -3,9 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/product_item_row_title"
