--- a/TwoChange/app/src/main/res/layout/base_activity.xml
+++ b/TwoChange/app/src/main/res/layout/base_activity.xml
@@ -43,6 +43,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:layout_gravity="start"
+        app:headerLayout="@layout/menu_header"
         app:menu="@menu/main_menu"/>
 
 </android.support.v4.widget.DrawerLayout>
