Natigation from product to profile

--- a/TwoChange/app/src/main/res/layout/fragment_product.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_product.xml
@@ -97,7 +97,8 @@
         android:id="@+id/content_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        android:orientation="vertical"
+        android:layout_marginBottom="24dp"/>
 
     </LinearLayout>
 
