--- a/TwoChange/app/src/main/res/layout/activity_profile.xml
+++ b/TwoChange/app/src/main/res/layout/activity_profile.xml
@@ -11,6 +11,7 @@
         android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/fragment_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -189,6 +190,13 @@
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                android:id="@+id/margin_layout"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                android:visibility="gone"/>
 
             <FrameLayout
                 android:id="@+id/contentProfile"
