--- a/TwoChange/app/src/main/res/layout/chat_active.xml
+++ b/TwoChange/app/src/main/res/layout/chat_active.xml
@@ -1,40 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
     android:weightSum="1">
-
-
-    <TextView
-        android:id="@+id/userChat"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_marginTop="30dp"
-        android:layout_alignRight="@+id/profChat"
-        android:layout_alignParentEnd="true"
-        android:textColor="#000"
-        android:layout_toEndOf="@+id/profChat"
-        android:paddingLeft="25dp"/>
+        android:orientation="horizontal">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profChat"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="10dp"
+            android:src="@mipmap/prof_default" />
+
+        <TextView
+            android:id="@+id/userChat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="16sp"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center"
+            android:textColor="#000"/>
+
+    </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="2.5px"
-        android:background="#C0C0C0"
-        android:layout_alignParentTop="true"
-        android:id="@+id/view" />
+        android:layout_height="1dp"
+        android:background="@color/light_grey" />
 
-    <ImageView
-        android:id="@+id/profChat"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        app:srcCompat="@mipmap/prof_default"
-        android:cropToPadding="true"
-        android:layout_below="@+id/view"
-        android:layout_alignParentStart="true" />
-
-
-</RelativeLayout>
+</LinearLayout>
