--- a/TwoChange/app/src/main/res/layout/chat_product_layout.xml
+++ b/TwoChange/app/src/main/res/layout/chat_product_layout.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
             android:layout_width="48dp"
             android:layout_height="48dp"
